--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: ekaterina.kochmar@mbzuai.ac.ae
 description: > # this means to ignore newlines until "baseurl:"
   Research on educational NLP, assessment, and culturally-aware AI at MBZUAI.
 baseurl: ""
-url: "https://edunlp-lab.github.io"
+url: ""
 
 include:
   - .htaccess
