--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -11,23 +11,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Install Ruby & Bundler (for Jekyll)
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1'
-          bundler-cache: true
-
-      - name: Install bundle
-        run: |
-          bundle config set path 'vendor/bundle'
-          bundle install
-
-      - name: Build site
+      - name: Build site in Docker (jekyll/builder)
         env:
           JEKYLL_ENV: production
-        run: bundle exec jekyll build --trace
+        run: |
+          docker run --rm \
+            -e JEKYLL_ENV=production \
+            -v "$PWD":/srv/jekyll \
+            -v "$PWD/vendor/bundle":/usr/local/bundle \
+            jekyll/builder:4.2.2 \
+            /bin/bash -lc "bundle config set path 'vendor/bundle' && bundle install && jekyll build --trace"
 
-      # Install Python client used to push to HF
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
