--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: EduNLP Lab
 email: ekaterina.kochmar@mbzuai.ac.ae
 description: > # this means to ignore newlines until "baseurl:"
   Research on educational NLP, assessment, and culturally-aware AI at MBZUAI.
-baseurl: ""
-url: ""
+url: "https://huggingface.co"
+baseurl: "/spaces/numaan-naeem/edunlp-site"
 
 include:
   - .htaccess
